--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+
+<html xmlns:wb="http://open.weibo.com/wb">
 <head>
   <meta charset="utf-8">
   
@@ -17,7 +18,7 @@
   
   
     <link rel="icon" href="//favicon.png">
-  
+  <script src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js" type="text/javascript" charset="utf-8"></script>
   <script src="/style.js"></script>
   
 
@@ -45,6 +46,7 @@
 			<ul>
 			
 				<li><a href="/">主页</a></li>
+				<wb:share-button appkey="2585794186" addition="full" type="button" ralateUid="2690332920"></wb:share-button>
 	        
 				<li><a href="/">相册</a></li>
 	        
